[package]
name = "dag-runner"
version = "0.1.0"
edition = "2024"

authors = ["RenovZ <cgsixv@gmail.com>"]
description = "A DAG runner with async support"
license = "MIT"
repository = "https://github.com/RenovZ/dag-runner"
readme = "README.md"
keywords = ["dag", "dag-runner", "async", "graph", "tokio"]
categories = ["concurrency", "data-structures"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.46", features = ["full"] }
